fixed modal postion on small screens

--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -45,3 +45,20 @@
     margin-top: -18px;
     margin-right: -18px;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+
+    .itemModal {
+        position: fixed;
+        top: 2%;
+        left: 2%;
+        transform: 'translate(-2%, -2%)' ;
+        background: #FFF;
+        padding: 30px;
+        z-index: 100;
+    }
+
+  }
